--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ "homepage": "https://mutolib123.github.io/recipee",
+{ "homepage": "https://mutolib123.github.io/recipeapp",
   "name": "recipee",
   "version": "0.1.0",
   "private": true,
@@ -15,7 +15,7 @@
   "scripts": {
     "predeploy": "npm run build",
   "deploy": "gh-pages -d build",
-  
+
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
